[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "8.6.0"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
messages = "0.3.1"
anyhow = "1.0.98"
reqwest = {version = "0.12.19", default-features = false, features = ["rustls-tls"]}
serde_json = "1.0.140"
serde = {version = "1", features = ["derive"]}
dirs = "6.0.0"
quick-xml = {version = "0.37.5", features = ["serialize"]}
chrono = {version = "0.4.41", features = ["now"]}

[target.'cfg(not(target_os = "android"))'.dependencies]
wallpaper = {path = "../wallpaper"}

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.7.2", features = ["rt", "macros"] }
# wasm-bindgen = "0.2.95"
