[package]
# Do not change the name of this crate.
edition = "2021"
name = "hub"
version = "0.1.0"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = {version = "0.4.42", features = ["now"]}
dirs = "6.0.0"
futures-util = "0.3.31"
messages = "0.3.1"
quick-xml = {version = "0.38.3", features = ["serialize"]}
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls", "stream"]}
rinf = "8.7.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.143"
size = "0.5.0"
tokio = {version = "1.47.1", features = ["rt", "macros"]}

[target.'cfg(not(target_os = "android"))'.dependencies]
wallpaper = {path = "../wallpaper"}

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.7.2", features = ["rt", "macros"] }
# wasm-bindgen = "0.2.95"
